--- a/livestock_farm_system/pubspec.yaml
+++ b/livestock_farm_system/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   shared_preferences: ^2.0.15
   fluttertoast: ^8.0.9
   dio: ^4.0.6
-
+  carousel_slider: ^4.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
